--- a/package.json
+++ b/package.json
@@ -14,27 +14,32 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/node": "18.11.18",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.26",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "focus-trap-react": "^10.2.2",
     "framer-motion": "^8.5.5",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.105.0",
     "ms": "^2.1.3",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^9.0.4",
     "vaul": "^0.6.8"
