--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -38,6 +41,7 @@
     "focus-trap-react": "^10.2.2",
     "framer-motion": "^8.5.5",
     "lucide-react": "^0.105.0",
+    "luxon": "^3.4.4",
     "ms": "^2.1.3",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
@@ -58,6 +62,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/luxon": "^3.4.2",
     "@types/ms": "^0.7.32",
     "autoprefixer": "^10.4.16",
     "concurrently": "^7.6.0",
