--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "typeRoots": ["./types"],
     "plugins": [
       {
         "name": "next"
