--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -49,6 +50,7 @@
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-markdown": "^8.0.7",
     "resend": "^3.2.0",
     "sonner": "^1.4.41",
@@ -56,7 +58,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-debounce": "^9.0.4",
-    "vaul": "^0.6.8"
+    "vaul": "^0.6.8",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
