--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
+    "@uploadthing/react": "^6.4.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.26",
     "class-variance-authority": "^0.7.0",
@@ -57,6 +58,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "uploadthing": "^6.7.0",
     "use-debounce": "^9.0.4",
     "vaul": "^0.6.8",
     "zod": "^3.22.4"
