--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@uploadthing/react": "^6.4.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.0.26",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
@@ -60,6 +61,7 @@
     "typescript": "5.2.2",
     "uploadthing": "^6.7.0",
     "use-debounce": "^9.0.4",
+    "uuid": "^9.0.1",
     "vaul": "^0.6.8",
     "zod": "^3.22.4"
   },
@@ -69,6 +71,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/luxon": "^3.4.2",
     "@types/ms": "^0.7.32",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.16",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.31",
