Modify DialogContent to hide the close button
using a prop hideCloseButton. Hide it in InitialModal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@/styles/*": ["styles/*"]
     },
     "strict": true,
+    "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
