--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
