--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-hook-form": "^7.51.2",
     "react-markdown": "^9.0.1",
     "resend": "^3.2.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
