--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.11.0",
@@ -41,6 +43,7 @@
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "focus-trap-react": "^10.2.2",
