--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "emoji-mart": "^5.5.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "focus-trap-react": "^10.2.2",
     "framer-motion": "^11.0.22",
     "lucide-react": "^0.363.0",
-    "luxon": "^3.4.4",
     "ms": "^2.1.3",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
