--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
     "@types/node": "20.11.30",
-    "@types/react": "18.2.73",
-    "@types/react-dom": "18.2.22",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.22",
     "@uploadthing/react": "^6.4.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.6.2",
@@ -47,18 +47,18 @@
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.5.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "^14.2.0",
     "focus-trap-react": "^10.2.2",
     "framer-motion": "^11.0.22",
     "lucide-react": "^0.363.0",
     "ms": "^2.1.3",
-    "next": "14.1.4",
+    "next": "^14.2.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
     "query-string": "^9.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-markdown": "^9.0.1",
     "resend": "^3.2.0",
