--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.51.2",
     "react-markdown": "^9.0.1",
     "resend": "^3.2.0",
+    "sharp": "^0.33.3",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
